Add hardcoded image and recipe description for testing

--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,13 @@
           </div>
         </div>
         <section class="featured-recipe">
-          <img class="featured-recipe-img" src="" alt="">
+          <img class="featured-recipe-img" src="../assets/salmon.jpg" alt="">
           <div class="featured-recipe-info">
             <div class="featured-recipe-title">
-              (Featured Recipe Title)
+              Salmon + Pineapple + Forks
             </div>
             <div class="feature-recipe-description">
-              (Featured Recipe Description)
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
             </div>
           </div>
         </section>
