Add hardcoded hero for testing, correct spelling error

--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,16 @@
 </head>
 
 <body>
-  <header>
-    <div>
-      <img id='header-hamburger-menu' class='header-icon icon' src='../assets/bars-solid.svg'>
-      <h1>What's Cookin'</h1>
-    </div>
-    <div>
-      <!--  loading animation spot?  -->
-      <img id='header-profile-icon' class='header-icon icon' src='../assets/user-circle-regular.svg'>
-    </div>
+  <img class='hero' src='../assets/pizza.jpg'>
+  <header class='navbar'>
+      <div>
+        <img id='header-hamburger-menu' class='header-icon icon' src='../assets/bars-solid.svg'>
+        <h1>What's Cookin'</h1>
+      </div>
+      <div>
+        <!--  loading animation spot?  -->
+        <img id='header-profile-icon' class='header-icon icon' src='../assets/user-circle-regular.svg'>
+      </div>
   </header>
   <main>
     <section class="home-view">
@@ -34,12 +35,12 @@
             <div class="featured-recipe-title">
               Salmon + Pineapple + Forks
             </div>
-            <div class="feature-recipe-description">
+            <div class="featured-recipe-description">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
             </div>
           </div>
         </section>
-        <h1>This Week's Staff Picks</h1>
+        <h1>Popular Recipes</h1>
         <section class="staff-picks">
           <div class="staff-pick-one">
             <img class="staff-pick-one-img" src="" alt="">
