--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-  <img class='hero' src='../assets/pizza.jpg'>
+  <h1>What's Cookin'</h1>
+  <div id='hero-container'>
+    <img class='hero' src='../assets/pizza.jpg'>
+  </div>
+
   <header class='navbar'>
       <div>
         <img id='header-hamburger-menu' class='header-icon icon' src='../assets/bars-solid.svg'>
@@ -36,7 +40,7 @@
               Salmon + Pineapple + Forks
             </div>
             <div class="featured-recipe-description">
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, , when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             </div>
           </div>
         </section>
