--- a/src/index.html
+++ b/src/index.html
@@ -197,13 +197,13 @@
       <section class="recipe-right-column">
         <h2 class="recipe-title">Recipe Title</h2>
         <p class="recipe-details">Short blurb of what it is. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. </p>
-        <p class="recipe-instructions">Instructions:<br>
-          <br>1. take the things and cook them to their own liking. más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos
-          paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqued<br>
-          <br>2. maybe let the thing rest. más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y
-          editores de páginas web<br>
-          <br>3. eat the thing on your favorite plate.más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de
-          autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqued
+        <p class="recipe-instructions recipe-instructions-title">Instructions:<br>
+          <p class="recipe-instructions recipe-instructions-step"><br>1. take the things and cook them to their own liking. más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos
+          paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqued<br></p>
+          <p class="recipe-instructions recipe-instructions-step"><br>2. maybe let the thing rest. más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y
+          editores de páginas web<br></p>
+          <p class="recipe-instructions recipe-instructions-step"><br>3. eat the thing on your favorite plate.más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de
+          autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqued</p>
         </p>
       </section>
     </section>
