Add dropdown menu for the header-icon

--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,18 @@
         <!-- <div> -->
         <!-- <input type="checkbox" name="search-by-ingredient" value="search-by-ingredient"> Search Recipes by Ingredient -->
         <!-- </div> -->
-      </div>
+        <div class="dropdown header-icon">
+          <img id='header-profile-icon' class='dropdown header-icon icon' src='../assets/user-circle-regular.svg'>
+          <div class="dropdown-content">
+            <a href="#">Recipes To Cook</a>
+            <a href="#">Favorited Recipes</a>
+            <a href="#">My Pantry</a>
+          </div>
+        </div>
+      <!-- </div>
       <!--  loading animation spot?  -->
-      <img id='header-profile-icon' class='header-icon icon' src='../assets/user-circle-regular.svg'>
-    </div>
+      <!-- <img id='header-profile-icon' class='header-icon icon' src='../assets/user-circle-regular.svg'> -->
+    <!-- </div>  -->
   </header>
 
   <!-- HOME VIEW SECTION -->
@@ -198,11 +206,14 @@
         <h2 class="recipe-title">Recipe Title</h2>
         <p class="recipe-details">Short blurb of what it is. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. </p>
         <p class="recipe-instructions recipe-instructions-title">Instructions:<br>
-          <p class="recipe-instructions recipe-instructions-step"><br>1. take the things and cook them to their own liking. más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos
+        <p class="recipe-instructions recipe-instructions-step"><br>1. take the things and cook them to their own liking. más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos
+          hacen parecerlo un español que se puede leer. Muchos
           paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqued<br></p>
-          <p class="recipe-instructions recipe-instructions-step"><br>2. maybe let the thing rest. más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y
+        <p class="recipe-instructions recipe-instructions-step"><br>2. maybe let the thing rest. más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español
+          que se puede leer. Muchos paquetes de autoedición y
           editores de páginas web<br></p>
-          <p class="recipe-instructions recipe-instructions-step"><br>3. eat the thing on your favorite plate.más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de
+        <p class="recipe-instructions recipe-instructions-step"><br>3. eat the thing on your favorite plate.más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo
+          un español que se puede leer. Muchos paquetes de
           autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqued</p>
         </p>
       </section>
