Add icons to header-icon dropdown menu

--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,17 @@
         <div class="dropdown header-icon">
           <img id='header-profile-icon' class='dropdown header-icon icon' src='../assets/user-circle-regular.svg'>
           <div class="dropdown-content">
-            <a href="#">Recipes To Cook</a>
-            <a href="#">Favorited Recipes</a>
-            <a href="#">My Pantry</a>
+            <a href="#"><img class="dropdown-icons" src="../assets/utensils.svg" alt="">
+              Recipes To Cook</a>
+            <a href="#"><img class="dropdown-icons" src="../assets/star-solid.svg" alt="">
+              Favorited Recipes</a>
+            <a href="#">
+              <img class="dropdown-icons" src="../assets/bread.svg" alt="">
+              My Pantry</a>
+            <br>
+            <a href="#">
+              <img class="dropdown-icons" src="../assets/middle-finger.svg" alt="">
+              Log Out</a>
           </div>
         </div>
       <!-- </div>
